# Loop4UnityMCPServer

./: .gitignore  README.md
Assets/Plugins/Loop4UnityMcpServer/Documentation~/: index.md  stdio.md
Assets/Plugins/Loop4UnityMcpServer/Editor/: Loop4UnityMcpServer.Editor.asmdef
Assets/Plugins/Loop4UnityMcpServer/Editor/Installer/: EditorFileSystem.cs  PackageInit.cs  PackageInstaller.cs
Assets/Plugins/Loop4UnityMcpServer/Editor/Resources/: UnityConsoleLogsResource.cs
Assets/Plugins/Loop4UnityMcpServer/Editor/STDIO~/: pyproject.toml
Assets/Plugins/Loop4UnityMcpServer/Editor/STDIO~/src/loop_mcp_stdio/: __init__.py  loop_mcp_bridge_stdio.py
Assets/Plugins/Loop4UnityMcpServer/Editor/STDIO~/tests/: test_bridge.py
Assets/Plugins/Loop4UnityMcpServer/Editor/Settings/: LoopMcpServerSettings.cs
Assets/Plugins/Loop4UnityMcpServer/Editor/Tools/: ReadUnityConsoleLogsTool.cs  RunUnityTestsTool.cs  ScriptExecutionTool.cs
Assets/Plugins/Loop4UnityMcpServer/Samples~/SamplePrompts/: SamplePrompts.cs
Assets/Plugins/Loop4UnityMcpServer/Samples~/SampleResources/: SampleResources.cs
Assets/Plugins/Loop4UnityMcpServer/Samples~/SampleTools/: SampleTools.cs
Assets/Plugins/Loop4UnityMcpServer/Tests/: LoopMcpServer.Tests.asmdef  MockTestResultAdaptor.cs  ReadUnityConsoleLogsToolTests.cs  RunUnityTestsToolTests.cs  UnityConsoleLogsResourceTests.cs
Assets/Plugins/Loop4UnityMcpServer/Tests/StreamableHttp/: HttpRequestHandlerIntegrationTests.cs  McpHttpTransportTests.cs  SessionManagerTests.cs  SessionStateTests.cs  ValidationResultTests.cs
(+6 files in other folders)
