[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "loop-mcp-stdio"
version = "1.0.0"
description = "MCP STDIO Bridge for Unity Loop Server - connects Claude to Unity Editor via TCP"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ChromeHunters" }
]
keywords = ["mcp", "unity", "stdio", "bridge", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
loop-mcp-stdio = "loop_mcp_stdio:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/loop_mcp_stdio"]

[tool.hatch.build.targets.sdist]
include = [
    "src/loop_mcp_stdio"
]
